--- a/brinder-match-api/Dockerfile
+++ b/brinder-match-api/Dockerfile
@@ -6,6 +6,6 @@ RUN gradle build --no-daemon
 
 FROM eclipse-temurin:17-jre
 WORKDIR /home/application/java
-COPY --from=compile "/home/source/java/build/libs/application.jar" .
+COPY --from=compile "/home/source/java/build/libs/brinder-match-1.0.0.jar" .
 EXPOSE 8080
-ENTRYPOINT [ "java", "-jar", "/home/application/java/application.jar"]
+ENTRYPOINT [ "java", "-jar", "/home/source/java/build/libs/brinder-match-1.0.0.jar"]
