--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,34 +1,45 @@
-services:
-  keycloak:
-    build: ./keycloak
-    environment:
-      KEYCLOAK_ADMIN: keycloak
-      KEYCLOAK_ADMIN_PASSWORD: keycloak
-    ports:
-      - 8080:8080
-  mongo:
-    image: mongo
-    ports:
-      - "27017:27017"
-  profile:
-    build: ./brinder-profile-api
-    ports:
-      - 9080:8080
-    environment:
-      spring_profiles_active: security,docker
-    depends_on:
-      - mongo
-  swagger:
-    image: swaggerapi/swagger-ui
-    environment:
-      SWAGGER_JSON: /doc/tindeer.yaml
-      DEEP_LINKING: "true"
-      OAUTH2_REDIRECT_URL: http://localhost:8888/oauth2-redirect.html
-      OAUTH_CLIENT_ID: swagger
-      OAUTH_USE_PKCE: "true"  
-      OAUTH_REALM: tindeer
-      OAUTH_APP_NAME: swagger
-    ports: 
-      - 8888:8080
-    volumes:
-      - ./swagger:/doc
+  version: "3"
+  services:
+    keycloak:
+      build: ./keycloak
+      environment:
+        KEYCLOAK_ADMIN: keycloak
+        KEYCLOAK_ADMIN_PASSWORD: keycloak
+
+      ports:
+        - 8080:8080
+    mongo:
+      image: mongo
+      ports:
+        - "27017:27017"
+
+    profile:
+      image: ./brinder-profile-api
+      ports:
+        - 9080:8080
+      environment:
+        spring_profiles_active: security,docker
+      depends_on:
+        - mongo
+    match:
+      image: ./brinder-match-api
+      ports:
+        - 9090:8080
+      environment:
+        spring_profiles_active: security,docker
+      depends_on:
+        - mongo
+    swagger:
+      image: swaggerapi/swagger-ui
+      environment:
+        SWAGGER_JSON: /doc/tindeer.yaml
+        DEEP_LINKING: "true"
+        OAUTH2_REDIRECT_URL: http://localhost:8888/oauth2-redirect.html
+        OAUTH_CLIENT_ID: swagger
+        OAUTH_USE_PKCE: "true"
+        OAUTH_REALM: tindeer
+        OAUTH_APP_NAME: swagger
+      ports:
+        - 8888:8080
+      volumes:
+        - ./swagger:/doc
