--- a/swagger/tindeer.yaml
+++ b/swagger/tindeer.yaml
@@ -10,32 +10,128 @@ servers:
     description: Environnement de test local
 components:
   securitySchemes:
-    oAuthSample:    # <---- arbitrary name
+    oAuthSample:
       type: oauth2
       description: This API uses OAuth 2 with the implicit grant flow. [More info](https://api.example.com/docs/auth)
       flows:
-        authorizationCode:   # <---- OAuth flow(authorizationCode, implicit, password or clientCredentials)
+        authorizationCode:
           authorizationUrl: http://keycloak:8080/realms/tindeer/protocol/openid-connect/auth
           tokenUrl: http://keycloak:8080/realms/tindeer/protocol/openid-connect/token
           scopes:
             profile: access profile
             email: access email
-security: 
-  - oAuthSample: 
-    - profile
-    - email
+  schemas:
+    GeoCoordinates:
+      type: object
+      properties:
+        latitude:
+          type: number
+          format: double
+        longitude:
+          type: number
+          format: double
+    MatchedUser:
+      type: object
+      properties:
+        idMatchedUser:
+          type: string
+        firstName:
+          type: string
+        lastName:
+          type: string
+        geoCoordinates:
+          $ref: '#/components/schemas/GeoCoordinates'
+security:
+  - oAuthSample:
+      - profile
+      - email
 paths:
   /profiles/current:
     get:
-      summary: Retourne le profile courant de l'utilisateur
+      summary: Retourne le profil courant de l'utilisateur
+      security:
+        - oAuthSample:
+            - profile
       responses:
-        '200':    # status code
-          description: A JSON array of user names
+        '200':
+          description: Profil d'utilisateur courant retourné avec succès
           content:
             application/json:
-              schema: 
-                type: object
-                properties:
-                  name:
-                    type: string
-                    
+              schema:
+                $ref: '#/components/schemas/MatchedUser'
+  /match/create:
+    post:
+      summary: Crée un nouveau profil d'utilisateur avec géolocalisation
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GeoCoordinates'
+      responses:
+        '201':
+          description: Profil d'utilisateur créé avec succès
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MatchedUser'
+        '400':
+          description: Données invalides fournies
+  /match/{id}:
+    get:
+      summary: Retourne le profil d'utilisateur spécifié par ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Profil d'utilisateur trouvé
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MatchedUser'
+        '404':
+          description: Profil d'utilisateur non trouvé
+    put:
+      summary: Met à jour le profil d'utilisateur spécifié par ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GeoCoordinates'
+      responses:
+        '200':
+          description: Profil d'utilisateur mis à jour avec succès
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MatchedUser'
+        '400':
+          description: Données invalides fournies
+        '404':
+          description: Profil d'utilisateur non trouvé
+  /match/nearby:
+    get:
+      summary: Retourne les profils d'utilisateurs à proximité
+      security:
+        - oAuthSample:
+            - profile
+      responses:
+        '200':
+          description: Liste des profils d'utilisateurs à proximité retournée avec succès
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/MatchedUser'
